[workspace]
members = [
    "renderer",
    "scene",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
repository = "https://github.com/sshashank124/tsunami"

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
scene = { path = "scene" }
serde = { version = "1.0", default-features = false }

[profile.release]
opt-level = 3
codegen-units = 16
lto = "thin"

[profile.dev]
opt-level = 3
codegen-units = 64
lto = "thin"
