[workspace]
members = [
    "renderer",
    "scene",
    "shared",
    "glsl/glsl",
    "glsl/glsl_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
repository = "https://github.com/sshashank124/tsunami"

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
glsl = { path = "glsl/glsl" }
scene = { path = "scene" }
shared = { path = "shared" }
serde = { version = "1.0", default-features = false }

[workspace.lints.rust]
incomplete_features = "allow"
unsafe_op_in_unsafe_fn = { level = "allow", priority = 1 }

[workspace.lints.clippy]
all = "warn"
complexity = "warn"
pedantic = "warn"
perf = "warn"
nursery = "warn"
suspicious = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }

[profile.release]
opt-level = 3
codegen-units = 16
lto = "thin"

[profile.dev]
opt-level = 3
codegen-units = 64
lto = "thin"
