cargo-features = ["edition2024"]

[package]
name = "renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ash = { version = "0.38", features = ["linked"] }
bytemuck = { workspace = true }
glam = { workspace = true }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "ash-0.38", default-features = false, features = ["vulkan"] }
image = "0.25"
raw-window-handle = "*"
scene = { workspace = true }
shared = { workspace = true }

[lints]
workspace = true

[build-dependencies]
shaderc = "0.8"
