cargo-features = ["edition2024"]

[package]
name = "renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ash = { version = "0.38", features = ["linked"] }
bytemuck = { workspace = true }
firestorm = { workspace = true }
glam = { workspace = true }
vk-mem = { git = "https://github.com/adrien-ben/vk-mem-rs.git", rev = "113c534" }
image = "0.25"
raw-window-handle = "*"
scene = { workspace = true }
shared = { workspace = true }

[lints]
workspace = true

[build-dependencies]
shaderc = "0.8"
