cargo-features = ["edition2024"]

[package]
name = "scene"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true }
flate2 = "1"
glam = { workspace = true, features = ["bytemuck", "serde"] }
gltf = "1"
rmp-serde = { version = "1" }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
