cargo-features = ["edition2024"]

[package]
name = "scene"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
firestorm = { workspace = true }
flate2 = "1"
glam = { workspace = true }
gltf = "1"
rmp-serde = { version = "1" }
serde = { workspace = true, features = ["derive"] }
shared = { workspace = true }

[lints]
workspace = true
