[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
spirv-std = { workspace = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
bytemuck = { workspace = true }
glam = { workspace = true, features = ["bytemuck", "serde"] }
serde = { workspace = true, features = ["derive"] }
